--- a/Contact/thank-you.html
+++ b/Contact/thank-you.html
@@ -1,26 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Thank You | Broussard Shooting Academy</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
+ <head>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <title>
+   Thank You | Broussard Shooting Academy
+  </title>
+  <link href="styles.css" rel="stylesheet"/>
+ </head>
+ <body>
   <header class="site-header">
-    <img class="logo" src="../IMAGES/logo.png" alt="Broussard Shooting Academy Logo" />
-    <nav>
-      <a href="../index.html">Home</a>
-      <a href="../courses/index.html">Courses</a>
-      <a href="../more-reviews/index.html">Reviews</a>
-      <a href="form.html">Contact</a>
-    </nav>
+   <img alt="Broussard Shooting Academy Logo" class="logo" src="../IMAGES/logo.png"/>
+   <button aria-label="Toggle navigation" class="nav-toggle" id="navToggle">
+    ☰
+   </button>
+   <nav class="header-nav" id="mainNav">
+    <a href="../index.html">
+     Home
+    </a>
+    <a href="../courses/index.html">
+     Courses
+    </a>
+    <a href="../more-reviews/index.html">
+     Reviews
+    </a>
+    <a href="../contact/index.html">
+     Contact
+    </a>
+   </nav>
   </header>
-
   <section class="info-header">
-    <h1>Thank You!</h1>
-    <p>Your message has been sent. We'll get back to you shortly.</p>
-    <a href="../courses/index.html" class="button">View Our Courses</a>
+   <h1>
+    Thank You!
+   </h1>
+   <p>
+    Your message has been sent. We'll get back to you shortly.
+   </p>
+   <a class="button" href="../courses/index.html">
+    View Our Courses
+   </a>
   </section>
-</body>
+  <script>
+   const navToggle = document.getElementById('navToggle');
+const mainNav = document.getElementById('mainNav');
+navToggle.addEventListener('click', () => {
+  mainNav.classList.toggle('nav-open');
+});
+document.querySelectorAll('.header-nav a').forEach(link => {
+  link.addEventListener('click', () => {
+    mainNav.classList.remove('nav-open');
+  });
+});
+  </script>
+ </body>
 </html>
