--- a/courses/index.html
+++ b/courses/index.html
@@ -25,7 +25,7 @@
     <a href="../more-reviews/index.html">
      Reviews
     </a>
-    <a href="../contact/form.html">
+    <a href="../contact/index.html">
      Contact
     </a>
    </nav>
