--- a/contact/index.html
+++ b/contact/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <title>Contact | Broussard Shooting Academy</title>
-  <link href="../styles.css" rel="stylesheet"/>
+  <link href="styles.css" rel="stylesheet"/>
 </head>
 <body>
   <header class="site-header">
